--- a/app/views/points/index.html.erb
+++ b/app/views/points/index.html.erb
@@ -33,15 +33,15 @@
                   <label for="point_latitude" class="form-label">Latitude</label>
                   <input type="text" class="form-control" name="point[latitude]" id="point_latitude" value="<%= @point.latitude %>">
                 </div>
-                <div>
+                <div class="form-group">
                   <label for="point_longitude" class="form-label">Longitude</label>
                   <input type="text" class="form-control" name="point[longitude]" id="point_longitude" value="<%= @point.longitude %>">
                 </div>
-                <div>
+                <div class="form-group">
                   <label for="point_name" class="form-label">Nome</label>
                   <input type="text" class="form-control" name="point[name]" id="point_name" value="<%= @point.name %>">
                 </div>
-                <div>
+                <div class="form-group">
                   <label for="point_description" class="form-label">Descrição</label>
                   <textarea name="point[description]" class="form-control" id="point_description"><%= @point.description %></textarea>
                 </div>
