image added to header background

--- a/app/views/points/index.html.erb
+++ b/app/views/points/index.html.erb
@@ -5,16 +5,26 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Paisagens Geomorfológicas do Brasil</title>
     <link rel="stylesheet" href="https://unpkg.com/leaflet@1.7.1/dist/leaflet.css" />
+        <style>
+      .header-bg {
+        background: linear-gradient(to right, rgba(109, 159, 17, 0.8), rgba(29, 188, 201, 0.8)), url('https://plus.unsplash.com/premium_photo-1680200662642-9dad0061f5db?q=80&w=1471&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D');
+        background-size: cover;
+        background-position: center;
+        color: white;
+        padding: 60px 0;
+      }
+
+    </style>
 </head>
 <body>
     <!-- Header -->
-    <header class="text-center">
-        <%= image_tag("logo2.png", alt: "Paisagens Geomorfológicas do Brasil", class: "logo") %>
-        <section class="text-center mt-3">
-          <h1 class="display-4">Paisagens Geomorfológicas do Brasil</h1>
-          <p class="lead">Explore, compartilhe e descubra os pontos geomorfológicos incríveis do nosso país!</p>
-          <%# <a href="#map-section" class="btn btn-primary btn-lg">Ver Mapa</a> %>
-        </section>
+    <header class="header-bg text-center">
+      <%= image_tag("logo2.png", alt: "Paisagens Geomorfológicas do Brasil", class: "logo") %>
+      <section class="text-center mt-3">
+        <h1 class="display-4">Paisagens Geomorfológicas do Brasil</h1>
+        <p class="lead">Explore, compartilhe e descubra os pontos geomorfológicos incríveis do nosso país!</p>
+        <%# <a href="#map-section" class="btn btn-primary btn-lg">Ver Mapa</a> %>
+      </section>
     </header>
 
     <!-- Main Content -->
